<resources>
    <string name="app_name">SquadUp DSM</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_profile">Profile</string>

    <string name="title_section1">Profile</string>
    <string name="title_section2">Your Squad</string>
    <string name="title_section3">Suggested Events</string>
    <string name="title_section4">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_squad">Squad</string>
    <string name="title_activity_other_profile">Other_Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Login to SquadUp</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_interest_quiz2">InterestQuiz2</string>
    <string name="title_activity_squad_chat">SquadChat</string>
	<string name="Date1">Sunday, Sept. 20th</string>
	<string name="Time2pm">2:00 PM</string>
	<string name="Time7pm">7:00 PM</string>
	<string name="Date2">Monday, Sept 21st</string>
	<string name="Time1am">1:00 AM</string>
	<string name="Date3">Tuesday, Sept 22nd</string>
	<string name="Time4pm">4:00 PM</string>
	<string name="Time730pm">7:30 PM</string>
	<string name="Date4">Wednesday, Sept. 23rd</string>
	<string name="Time7am">7:00 AM</string>
	<string name="Time5am">5:00 PM</string>
	<string name="Date5">Thursday, Sept. 24th</string>
	<string name="Time6pm">6:00 PM</string>
	<string name="Date6">Friday, Sept. 25th</string>
	<string name="Time9am">9:00 AM</string>
	<string name="Date7">Saturday, Sept. 26th</string>
	<string name="Broadway">Broadway Bound</string>
	<string name="Laugh">Laughing at my Luck</string>
	<string name="Yo">Otava Yo</string>
	<string name="Planner">Event Planner Meetup</string>
	<string name="Trivia">Team Trivia</string>
	<string name="Strength">Morning Circus: Strength</string>
	<string name="Spirits">Spirits of the North</string>
	<string name="Woods">Wandering Woods: North</string>
	<string name="Board">Board Game Night</string>
	<string name="CookSarah">Cooking With Sarah</string>
	<string name="Dance">Dancing With Adrian</string>
	<string name="Jazz">Jazz Happy Hour</string>
	<string name="Shibby">The Shibby Pictures</string>
	<string name="Submit">Submit</string>
	<string name="LogoDesc">SquadUp DSM Logo</string>
	<string name="AboutYourself">About Yourself</string>
	<string name="Username">Username</string>
	<string name="PrefPronoun">Preferred Pronoun</string>
	<string name="Interests">Interests (Select all that apply)</string>
	<string name="Circus">Circus</string>
	<string name="Culinary">Culinary</string>
	<string name="Dance2">Dance</string>
	<string name="Education">Education</string>
	<string name="Film">Film</string>
	<string name="Kids">Kids</string>
	<string name="Literary">Literary</string>
	<string name="Music">Music</string>
	<string name="Social">Social</string>
	<string name="Theater">Theater</string>
	<string name="VisArt">Visual Art</string>
	<string name="Coed">Co-ed Squad?</string>
	<string name="Her">Her Squad</string>
	<string name="His">His Squad</string>
	<string name="Mixed">Mixed Squad</string>
	<string name="Import">Import Google Calendar</string>
	<string name="Next">Next</string>
	<string name="Quiztime">Quiz Time!</string>
	<string name="Quiz1">Would you ever kick it and travel the world alone?</string>
	<string name="Quiz2">Yes please.</string>
	<string name="Quiz3">No thank you.</string>
	<string name="Quiz4">What are your innermost feelings about horror movies?</string>
	<string name="Quiz5">2spooky4me</string>
	<string name="Quiz6">All about them. Wes Craven marathon at my place?</string>
	<string name="Quiz7">Do you care about politics?</string>
	<string name="Quiz8">Not a whole lot. The caucus is when again?</string>
	<string name="Quiz9">Yes! I am informed, registered and ready to debate.</string>
	<string name="Quiz10">What is your go-to friend-date activity?</string>
	<string name="Quiz11">Tea if I\'m feeling adventurous. Netflix and chill = more than likely</string>
	<string name="Quiz12">Checking out a gallery.</string>
	<string name="Quiz13">Razzle dazzle me. Let\'s hit up the theatre!</string>
	<string name="Quiz14">Friends who workout together stay together.</string>
	<string name="FacebookLogin">Facebook Login</string>
	<string name="FacebookSignup">Facebook Signup</string>
	<string name="Argus">Argus</string>
	<string name="ArgusUsername">A.K.A. TotallyMagical</string>
	<string name="HePronoun">He/Him</string>
	<string name="EventsAttending">Events Attending</string>
	<string name="Date8">6:00PM Sept, 18</string>
	<string name="Date9">9:00PM Sept, 18</string>
	<string name="Developments">Brett Budzinski - Developments</string>
	<string name="Underwear">It\'s Sheepish: An Underwear Comedy</string>
	<string name="TheirSquad">Their Squad</string>
	<string name="Dolorous">Dolores Umbridge</string>
	<string name="DolUsername">A.K.A DottyBridge</string>
	<string name="Pansy">Pansy Parkinson</string>
	<string name="PanUsername">A.K.A MrsMalfoy</string>
	<string name="Malfoy">Draco Malfoy</string>
	<string name="MalUsername">A.K.A SlytherinRulez</string>
	<string name="Fudge">Cornelius Fudge</string>
	<string name="FudgeUsername">A.K.A HesBack</string>
	<string name="Dolores">Dolores</string>
	<string name="MainUsername">A.K.A. DottyBridge</string>
	<string name="HerPronoun">Her/She</string>
	<string name="Award">Squad Champion</string>
	<string name="SquadChat">Squad Chat</string>
	<string name="Date10">6:00PM Sept, 18</string>
	<string name="Date11">9:00PM Sept, 18</string>
	<string name="Date12">5:30PM Sept, 19</string>
	<string name="Basement">Roxi Copland Live at The Basement</string>
	<string name="SuggestedEvents">Suggested Events...</string>
	<string name="MySquad">My Squad</string>
	<string name="Filch">Argus Filch</string>
	<string name="FilUsername">A.K.A TotallyMagical</string>
	<string name="NewSquadRequest">Request New Squad</string>
	<string name="GoogleCalUpdate">Update from Google Calendar</string>
	<string name="RetakeQuiz">Retake Quiz</string>
	<string name="ChatPoC">ChatPoC</string>
	<string name="MessagePrompt">Enter your message here</string>

	<string-array name="pronouns">
        <item>He/Him/His</item>
        <item>She/Her/Hers</item>
        <item>They/Them/Theirs</item>
    </string-array>
	
	<string-array name="months">
		<item>00</item>
		<item>01</item>
		<item>02</item>
		<item>03</item>
		<item>04</item>
		<item>05</item>
		<item>06</item>
		<item>07</item>
		<item>08</item>
		<item>09</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
	</string-array>

	<string-array name ="years"	>
		<item>1950</item>
		<item>1951</item>
		<item>1952</item>
		<item>1953</item>
		<item>1954</item>
		<item>1955</item>
		<item>1956</item>
		<item>1957</item>
		<item>1958</item>
		<item>1959</item>
		<item>1960</item>
		<item>1961</item>
		<item>1962</item>
		<item>1963</item>
		<item>1964</item>
		<item>1965</item>
		<item>1967</item>
		<item>1968</item>
		<item>1969</item>
		<item>1970</item>
		<item>1971</item>
		<item>1972</item>
		<item>1973</item>
		<item>1974</item>
		<item>1975</item>
		<item>1976</item>
		<item>1977</item>
		<item>1978</item>
		<item>1979</item>
		<item>1980</item>
		<item>1981</item>
		<item>1982</item>
		<item>1983</item>
		<item>1984</item>
		<item>1985</item>
		<item>1986</item>
		<item>1987</item>
		<item>1988</item>
		<item>1989</item>
		<item>1990</item>
		<item>1991</item>
		<item>1992</item>
		<item>1993</item>
		<item>1994</item>
		<item>1995</item>
		<item>1996</item>
		<item>1997</item>
		<item>1998</item>
		<item>1999</item>
		<item>2000</item>
		<item>2001</item>
		<item>2002</item>
		<item>2003</item>
		<item>2004</item>
		<item>2005</item>
		<item>2006</item>
		<item>2007</item>
		<item>2008</item>
		<item>2009</item>
		<item>2010</item>
		<item>2011</item>
		<item>2012</item>
		<item>2013</item>
		<item>2014</item>
		<item>2015</item>
	</string-array>
	<string-array name="days">
		<item>01</item>
		<item>02</item>
		<item>03</item>
		<item>04</item>
		<item>05</item>
		<item>06</item>
		<item>07</item>
		<item>08</item>
		<item>09</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>15</item>
		<item>16</item>
		<item>17</item>
		<item>18</item>
		<item>19</item>
		<item>20</item>
		<item>21</item>
		<item>22</item>
		<item>23</item>
		<item>24</item>
		<item>25</item>
		<item>26</item>
		<item>27</item>
		<item>28</item>
		<item>29</item>
		<item>30</item>
		<item>31</item>
	</string-array>
		
		</resources>
