<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:label="Argus Filch"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.suncoindustries.squadupdsm.OtherProfile">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/largeiconsargus" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true"
        android:text="@string/Argus"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView50"
        android:layout_centerHorizontal="true"
        android:text="@string/ArgusUsername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pink" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/HePronoun"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView25"
        android:layout_marginBottom="5dp"
        android:text="@string/EventsAttending"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView27"
        android:text="@string/Date8"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView28"
        android:layout_marginBottom="20dp"
        android:text="@string/Date9"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView28"
        android:layout_alignTop="@+id/textView28"
        android:layout_below="@+id/textView27"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/textView28"
        android:layout_toEndOf="@+id/textView28"
        android:gravity="center"
        android:text="@string/Developments"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView29"
        android:layout_alignTop="@+id/textView29"
        android:layout_below="@+id/textView28"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/textView29"
        android:layout_toEndOf="@+id/textView29"
        android:gravity="center"
        android:text="@string/Underwear"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />


    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView29"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/TheirSquad"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView35"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35"
        android:src="@drawable/smalliconsdolores" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_alignTop="@+id/imageView2"
        android:text="@string/Dolorous"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_below="@+id/textView36"
        android:text="@string/DolUsername"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView2"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35"
        android:src="@drawable/smalliconspansy" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_alignTop="@+id/imageView3"
        android:text="@string/Pansy"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_below="@+id/textView38"
        android:text="@string/PanUsername"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35"
        android:src="@drawable/smalliconsmalfoy" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_alignTop="@+id/imageView4"
        android:text="@string/Malfoy"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_below="@+id/textView40"
        android:text="@string/MalUsername"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView4"
        android:layout_marginBottom="20dp"
        android:layout_toLeftOf="@+id/textView35"
        android:layout_toStartOf="@+id/textView35"
        android:src="@drawable/smalliconscornelius" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_alignTop="@+id/imageView5"
        android:text="@string/Fudge"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/eventSecondaryText"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView35"
        android:layout_alignStart="@+id/textView35"
        android:layout_below="@+id/textView42"
        android:text="@string/FudgeUsername"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="11dp" />


</RelativeLayout>
